--- a/demo.ipynb
+++ b/demo.ipynb
@@ -7,12 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import networkx as nx\n",
-    "from random import random\n",
-    "from fastdtw import fastdtw\n",
-    "from gensim.models.word2vec import Word2Vec\n",
-    "from struct2vec_utils import *"
+    "from struct2vec_utils import *",
    ]
   },
   {
